<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    >

    <LinearLayout 
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">

        <ToggleButton
        	android:id="@+id/togMid"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content">
		</ToggleButton>
		
    	<TextView 
    	    android:layout_marginLeft="15dp"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textColor="#ffffff"
        	android:textSize="18sp"
        	android:text="@string/toggleMiddleware"
        	android:layout_gravity="center_vertical">
    	</TextView>
    	
    </LinearLayout>

	<LinearLayout 
	    android:layout_marginTop="20dp"
		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
    	android:orientation="horizontal">
	    	
	    <TextView
        	android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/runFast"
    		android:textColor="#FFFFFF"
    		/>
	    <Button 
	        android:id="@+id/runFastSearch"
	        android:layout_marginLeft="5dp"
	   	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
   			android:text="@string/search"
    	    />

    </LinearLayout>
		
	<LinearLayout
	    android:id="@+id/llInvites"
	    android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
    	android:layout_height="120dp"
    	android:orientation="vertical">
	</LinearLayout>
	
	<TextView
	    android:id="@+id/tvReceivedInvite"
	    android:layout_marginTop="15dp"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/receivedInvite"
    	android:textColor="#FFFFFF"
    	android:visibility="invisible" 
	    />
	
	<LinearLayout
	    android:layout_marginTop="5dp"
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="horizontal">
	    <Button 
	        android:id="@+id/btEnterInvite"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/accept"
	        android:visibility="invisible"/>
	    <Button 
	        android:id="@+id/btCancelInvite"
	 	    android:layout_marginLeft="5dp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel"
	        android:visibility="invisible"/>
	</LinearLayout>
	
</LinearLayout>
